--- a/review-service/pom.xml
+++ b/review-service/pom.xml
@@ -55,6 +55,12 @@
             <artifactId>spring-security-web</artifactId>
             <version>5.7.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>5.3.23</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
