--- a/review-service/src/main/resources/application.properties
+++ b/review-service/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.data.mongodb.uri=mongodb://localhost:27017/reviews-service
-#spring.security.user.name=user
-#spring.security.user.password=password
+server.port=8081
+spring.application.name=review-service
