--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,6 +42,10 @@ services:
   eureka-server:
     container_name: eureka-server
     image: choonsky/eureka-server:latest
+    ports:
+      - "8761:8761"
+    expose:
+      - "8761"
     environment:
       - SPRING_PROFILES_ACTIVE=docker
 
@@ -49,6 +53,10 @@ services:
   review-service:
     container_name: review-service
     image: choonsky/review-service:latest
+    ports:
+      - "8081:8081"
+    expose:
+      - "8081"
     environment:
       - SPRING_PROFILES_ACTIVE=docker
     depends_on:
@@ -60,6 +68,10 @@ services:
   product-service:
     container_name: product-service
     image: choonsky/product-service:latest
+    ports:
+      - "8082:8082"
+    expose:
+      - "8082"
     environment:
       - SPRING_PROFILES_ACTIVE=docker
     depends_on:
